--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&display=swap">    
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&display=swap"
+    />
     <link rel="stylesheet" href="css/loader.css" />
     <link rel="stylesheet" href="css/all.css" />
   </head>
@@ -31,7 +34,7 @@
       </div>
       <h3 class="section-title">床墊優勢</h3>
       <ul class="bedAdvantage">
-        <li>
+        <li data-aos="zoom-in" data-aos-duration="1000">
           <img
             class="bedAdvantage-img"
             src="img/tR426y5.png"
@@ -39,11 +42,11 @@
           />
           <p class="bedAdvantage-text">原木料環保</p>
         </li>
-        <li>
+        <li data-aos="zoom-in" data-aos-duration="1000">
           <img class="bedAdvantage-img" src="img/Fd2MiBb.png" alt="好收納" />
           <p class="bedAdvantage-text">好收納</p>
         </li>
-        <li>
+        <li data-aos="zoom-in" data-aos-duration="1000">
           <img class="bedAdvantage-img" src="img/5n1uTFh.png" alt="好組裝" />
           <p class="bedAdvantage-text">好組裝</p>
         </li>
@@ -64,31 +67,43 @@
             </thead>
             <tr>
               <td>可單人自行組裝</td>
-              <td><span class="material-icons">done</span></td>
+              <td>
+                <span
+                  class="material-icons"
+                  data-aos="fade-up"
+                  data-aos-delay="50"
+                  >done</span
+                >
+              </td>
               <td class="text-muted">不一定</td>
               <td></td>
             </tr>
             <tr>
               <td>可多次重複拆裝</td>
-              <td><span class="material-icons">done</span></td>
+              <td><span class="material-icons" data-aos="fade-up"
+                data-aos-delay="60">done</span></td>
               <td></td>
               <td></td>
             </tr>
             <tr>
               <td>床墊規格彈性大</td>
-              <td><span class="material-icons">done</span></td>
+              <td><span class="material-icons" data-aos="fade-up"
+                data-aos-delay="70">done</span></td>
               <td class="text-muted">不一定</td>
               <td class="text-muted">不一定</td>
             </tr>
             <tr>
               <td>材質可長久使用</td>
-              <td><span class="material-icons">done</span></td>
+              <td><span class="material-icons" data-aos="fade-up"
+                data-aos-delay="80">done</span></td>
               <td></td>
-              <td><span class="material-icons">done</span></td>
+              <td><span class="material-icons" data-aos="fade-up"
+                data-aos-delay="90">done</span></td>
             </tr>
             <tr>
               <td>小客車即可搬運</td>
-              <td><span class="material-icons">done</span></td>
+              <td><span class="material-icons" data-aos="fade-up"
+                data-aos-delay="100">done</span></td>
               <td></td>
               <td></td>
             </tr>
@@ -286,8 +301,7 @@
         <option value="收納">收納</option>
         <option value="窗簾">窗簾</option>
       </select>
-      <ul class="productWrap">       
-      </ul>      
+      <ul class="productWrap"></ul>
     </section>
     <section class="shoppingCart">
       <h3 class="section-title">我的購物車</h3>
@@ -424,11 +438,15 @@
     <!-- Page Preloder -->
     <div id="preloder">
       <div class="loader"></div>
-    </div>    
+    </div>
     <script src="//cdnjs.cloudflare.com/ajax/libs/validate.js/0.13.1/validate.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>   
     <script type="module" src="js/animation.js"></script>
     <script type="module" src="js/api.js"></script>
     <script type="module" src="js/all.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
