--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&display=swap"
     />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/loader.css" />
     <link rel="stylesheet" href="css/all.css" />
   </head>
@@ -68,42 +69,47 @@
             <tr>
               <td>可單人自行組裝</td>
               <td>
-                <span
-                  class="material-icons"
-                  data-aos="fade-up"
-                  data-aos-delay="50"
-                  >done</span
-                >
+                <span class="material-icons" data-aos="fade-up" data-aos-duration="50">done</span>
               </td>
               <td class="text-muted">不一定</td>
               <td></td>
             </tr>
             <tr>
               <td>可多次重複拆裝</td>
-              <td><span class="material-icons" data-aos="fade-up"
-                data-aos-delay="60">done</span></td>
+              <td>
+                <span class="material-icons" data-aos="fade-up" data-aos-duration="60">done</span>
+              </td>
               <td></td>
               <td></td>
             </tr>
             <tr>
               <td>床墊規格彈性大</td>
-              <td><span class="material-icons" data-aos="fade-up"
-                data-aos-delay="70">done</span></td>
+              <td>
+                <span
+                  class="material-icons"
+                  data-aos="fade-up"
+                  data-aos-delay="70"
+                  >done</span
+                >
+              </td>
               <td class="text-muted">不一定</td>
               <td class="text-muted">不一定</td>
             </tr>
             <tr>
               <td>材質可長久使用</td>
-              <td><span class="material-icons" data-aos="fade-up"
-                data-aos-delay="80">done</span></td>
+              <td>
+                <span class="material-icons" data-aos="fade-up" data-aos-delay="80">done</span>
+              </td>
               <td></td>
-              <td><span class="material-icons" data-aos="fade-up"
-                data-aos-delay="90">done</span></td>
+              <td>
+                <span class="material-icons" data-aos="fade-up" data-aos-delay="90">done</span>
+              </td>
             </tr>
             <tr>
               <td>小客車即可搬運</td>
-              <td><span class="material-icons" data-aos="fade-up"
-                data-aos-delay="100">done</span></td>
+              <td>
+                <span class="material-icons" data-aos="fade-up" data-aos-delay="100">done</span>
+              </td>
               <td></td>
               <td></td>
             </tr>
@@ -441,12 +447,15 @@
     </div>
     <script src="//cdnjs.cloudflare.com/ajax/libs/validate.js/0.13.1/validate.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>   
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script type="module" src="js/animation.js"></script>
     <script type="module" src="js/api.js"></script>
     <script type="module" src="js/all.js"></script>
     <script>
-      AOS.init();
+      AOS.init({
+        duration: 1500,
+        once: true,
+      });
     </script>
   </body>
 </html>
