--- a/index.html
+++ b/index.html
@@ -452,10 +452,7 @@
     <script type="module" src="js/api.js"></script>
     <script type="module" src="js/all.js"></script>
     <script>
-      AOS.init({
-        duration: 1500,
-        once: true,
-      });
+      AOS.init();
     </script>
   </body>
 </html>
