--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script type="module" src="js/animation.js"></script>
     <script type="module" src="js/api.js"></script>
-    <script type="module" src="js/all.js"></script>
+    <script type="module" src="js/index.js"></script>
     <script>
       AOS.init();
     </script>
